# fedimint

./: .gitignore  .gitpod.yml  .tmuxinator.yml  Cargo.toml  README.md  flake.nix  index.html  settings.html  shell.nix
.github/workflows/: ci-nix.yml
client/cli/: Cargo.toml
client/client-lib/: Cargo.toml
client/clientd/: Cargo.toml
core/client/: Cargo.toml
crypto/tbs/: Cargo.toml
devimint/: Cargo.toml
devimint/src/: devfed.rs  external.rs  federation.rs  lib.rs  main.rs  tests.rs  util.rs  vars.rs
docs/: architecture.md  database.md  dev-running.md  gateway.md  networking.md
fedimint/: Cargo.toml
fedimint-api/: Cargo.toml
fedimint-bin-tests/src/: federation.rs  main.rs
fedimint-bitcoind/src/: lib.rs
fedimint-cli/src/: lib.rs  ng.rs
fedimint-client-legacy/src/: lib.rs
fedimint-client/src/: lib.rs
fedimint-core/: Cargo.toml
fedimint-core/src/: admin_client.rs  api.rs  config.rs  core.rs  lib.rs  outcome.rs  task.rs  transaction.rs
fedimint-server/: Cargo.toml
fedimint-server/setup/: configgen.rs  mod.rs
fedimint-server/src/: config.rs  lib.rs
fedimint-server/templates/: base.html  configs.html  dealer.html  home.html  url_connection.html
fedimint-setup/: Cargo.toml
fedimint-setup/src/: forms.rs  lib.rs  templated.rs
fedimint-setup/templates/: add_peer.html
fedimint-sqlite/: Cargo.toml
fedimint-testing/: Cargo.toml
fedimint-testing/src/: federation.rs  fixtures.rs  gateway.rs
fedimint/src/: lib.rs
fedimint_core_client/: struct.ClientModule.html  struct.Output.html  struct.OutputOutcome.html  struct.PendingOutput.html
fedimint_mint/: enum.CombineError.html  enum.MintError.html  struct.Mint.html  struct.MintShareErrors.html  struct.Nonce.html  struct.Note.html  struct.SignRequest.html
fedimint_server/: struct.FedimintServer.html
fedimintd/: Cargo.toml
guardian-gui/: README.md
guardian-ui/: tsconfig.json
integrationtests/: Cargo.toml
ln-gateway/: Cargo.toml
lnd1/: lnd.conf
minimint/: Cargo.toml
minimint-shared/: Cargo.toml
minimint-shared/src/: lib.rs  transaction.rs
mint-client/: Cargo.toml
misc/: gateway-container-entrypoint.sh  mprocs.yaml
modules/fedimint-tabconf/: Cargo.toml
modules/fedimint-tabconf/src/: db.rs  lib.rs
nix/: flakebox.nix
scripts/: bitcoind.sh  build.sh  cli-test.sh  fed-shell.sh  gw-reload.sh  gw-test.sh  hack.sh  integrationtest.sh  intercept_htlcs.sh  latency-test.sh  lib.sh  lightningd.sh  lnd.sh  lnd1.conf  lnd2.conf  mprocs.sh  new-gw-test.sh  pegin.sh  run-ui.sh  rust-tests.sh  setup-tests.sh  start-fed.sh  start-server.sh  startfed.sh  tmux-user-shell.sh  ui-setup.sh
(+169 files in other folders)
