[package]
name = "fedimint-tabconf"
version = "0.1.0"
authors = ["The Fedimint Developers"]
edition = "2021"
description = "fedimint-tabconf is whatever you want it to be."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fedimint_tabconf"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.65"
async-trait = "0.1"
fedimint-api = { path = "../../fedimint-api" }
fedimint-derive = { path = "../../fedimint-derive" }
rand = "0.8"
serde = { version = "1.0.145", features = [ "derive" ] }
tracing = "0.1.36"

[dev-dependencies]
tracing-subscriber = { version = "0.3.15", features = [ "env-filter" ] }
test-log = { version = "0.2", features = [ "trace" ], default-features = false }
